--- a/CarND-LaneLines-P1/FindLanesSandBox.ipynb
+++ b/CarND-LaneLines-P1/FindLanesSandBox.ipynb
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  6%|▌         | 14/251 [00:03<00:50,  4.71it/s]"
+      "100%|██████████| 251/251 [01:20<00:00,  2.85it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: test_videos_output/challenge.mp4 \n",
+      "\n",
+      "CPU times: user 29.5 s, sys: 8.24 s, total: 37.7 s\n",
+      "Wall time: 1min 26s\n"
      ]
     }
    ],
@@ -609,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +635,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
