More updates to prelim documentation

--- a/CarND-LaneLines-P1/FindLanesSandBox.ipynb
+++ b/CarND-LaneLines-P1/FindLanesSandBox.ipynb
@@ -729,12 +729,16 @@
     "\n",
     "Yellow was selected by makeing sure that the R and G channels are close to each other and that the B channel is close to zero\n",
     "\n",
-    "# Image gradient\n",
+    "## Image gradient\n",
+    "Imgage gradient is used to find edges between objects using Canny edge detection\n",
+    "The gradient is smoothed using Gaussian filtering to prevent spurious lines from appearing.\n",
     "\n",
     "## Shape\n",
-    "\n",
+    "Lines that are almost vertical are selected and straight. This set of lines constitute lane markings and excludes\n",
+    "many other artifacts.\n",
     "\n",
     "## Location\n",
+    "The area in front of the vehicle is selected as a region of interest since the camera is mounted in a fixed position with a forward 'view' of the where the vehicle is travelling. The assumption that lane markings will be in the middle of the image toward the bottom remains therefore valid for most situations.\n",
     "\n",
     "## Filter lines\n",
     "The lines that were found this way have also been filtered to only show lines that have a length longer than 10 pixels to exclude other lines that artifacts mey produce.\n",
