--- a/CarND-LaneLines-P1/FindLanesSandBox.ipynb
+++ b/CarND-LaneLines-P1/FindLanesSandBox.ipynb
@@ -741,11 +741,11 @@
     "The area in front of the vehicle is selected as a region of interest since the camera is mounted in a fixed position with a forward 'view' of the where the vehicle is travelling. The assumption that lane markings will be in the middle of the image toward the bottom remains therefore valid for most situations.\n",
     "\n",
     "## Filter lines\n",
-    "The lines that were found this way have also been filtered to only show lines that have a length longer than 10 pixels to exclude other lines that artifacts mey produce.\n",
+    "The lines that were found through hough transform have also been filtered to only show lines that have a length longer than 10 pixels to exclude other lines that artifacts may produce.\n",
     "\n",
-    "Then lines where also filtered on line 'angle' by taking the ration of deltaX and deltaY.\n",
+    "Then lines where also filtered on line 'angle' by taking the ratio of deltaX and deltaY.\n",
     "\n",
-    "This allowed me to seperate the the left hand line from the right hand line.\n",
+    "This allowed the seperation of the left hand line from the right hand line.\n",
     "\n",
     "\n",
     "## Combining and extrapolating lines found\n",
